# av-aloha

./: .gitignore  .gitmodules  README.md  index.html  requirements.txt
data_collection_scripts/: activate.sh  constants.py  diff_ik.py  grad_ik.py  headset_control.py  headset_utils.py  image_recorders.py  kinematics.py  real_env.py  record_episodes.py  record_sim_episodes.py  replay_episode.py  replay_sim_episode.py  robot_utils.py  sim_env.py  sleep.py  transform_utils.py  visualize_all_episodes.py  visualize_episodes.py  webrtc_headset.py
data_collection_scripts/assets/: aloha_real.xml  scene.xml  task_hook_package.xml  task_insert_peg.xml  task_tube_transfer.xml
data_collection_scripts/test_scripts/: check_dataset_reward.py  move_grippers.py  read_grippers.py  read_joint_states.py  read_master_grippers.py  test_sim_reward.py  test_step_joints.py  test_zed.py  webrtc_receiver.py  webrtc_sender.py
eval_scripts/: README.md  constants.py  eval.py  image_recorders.py  launch_robot.sh  real_env.py  robot_utils.py  save_policy.py  sleep.py
eval_scripts/assets/: aloha_sim.xml  single_arm.xml  task_sew_needle.xml  task_slot_insertion.xml
gym_guided_vision/: .gitignore  README.md  pyproject.toml
gym_guided_vision/gym_guided_vision/: __init__.py  constants.py  env.py
gym_guided_vision/gym_guided_vision/assets/: aloha_sim.xml  joint_position_actuators.xml  task_hook_package.xml  task_insert_peg.xml  task_sew_needle.xml
gym_guided_vision/scripts/: check_dataset_reward.py  replay_sim_episode.py  test_env.py  visualize_all_episodes.py  visualize_episodes.py
(+27 files in other folders)
